# Universal_Robots_Client_Library

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .markdownlint.yaml  .pre-commit-config.yaml  .rosdoc_ignore_patterns  BUILD  CHANGELOG.rst  CMakeLists.txt  Gemfile  MODULE.bazel  README.md  WORKSPACE  codecov.yml  colcon.pkg  doc_requirements.txt  package.xml  rosdoc.yaml  run_examples.sh  ur_client_libraryConfig.cmake
.github/: codecov.yml  release.yml
.github/ISSUE_TEMPLATE/: ros_bug.yaml
.github/actions/rosdoc_lite_action/: Dockerfile  action.yml  entrypoint.sh
.github/helpers/: check_urls.sh
.github/workflows/: alpine-build.yml  check_links.yml  ci.yml  clang-tidy-check.yml  industrial-ci.yml  mac-build.yml  pre-commit.yml  prerelease.yml  rhel_build.yml  sphinx_build.yml  test_python_scripts.yml  win-build.yml
CMakeModules/: DefineCXX17CompilerFlag.cmake  FindGTest.CMakeLists.txt.in
doc/: api_reference.rst  architecture.graphml  architecture.rst  conf.py  dataflow.graphml  example.rst  examples.rst  index.rst  installation.rst  migration_notes.rst  polyscope_compatibility.md  polyscope_compatibility.rst  real_time.rst  setup.rst
doc/_static/css/: ur_theme.css
doc/architecture/: dashboard_client.rst  instruction_executor.rst  primary_client.rst  reverse_interface.rst  rtde_client.rst  script_command_interface.rst  script_reader.rst  script_sender.rst  trajectory_point_interface.rst  ur_driver.rst
doc/examples/: dashboard_client.rst  direct_torque_control.rst  external_fts_through_rtde.rst  force_mode.rst  freedrive.rst  instruction_executor.rst  primary_pipeline.rst  primary_pipeline_calibration.rst  rtde_client.rst  script_command_interface.rst  script_sender.rst  send_script.rst  spline_example.rst  tool_contact_example.rst  torque_control.rst  trajectory_point_interface.rst  trajectory_streaming.rst  ur_driver.rst
doc/images/: tcp_socket_states.drawio  trajectory_interface.drawio  urcl_architecture.drawio
doc/setup/: install_urcap_cb3.rst  install_urcap_e_series.rst  network_setup.rst  robot_setup.rst  ursim_docker.rst
docs/: architecture.rst  index.rst  installation.rst
examples/: CMakeLists.txt  dashboard_example.cpp  direct_torque_control.cpp  external_fts_through_rtde.cpp  force_mode_example.cpp  freedrive_example.cpp  full_driver.cpp  instruction_executor.cpp  pd_controller_example.cpp  primary_client.cpp  primary_pipeline.cpp  primary_pipeline_calibration.cpp  resolved_acceleration_example.cpp  rtde_client.cpp  script_command_interface.cpp  script_sender.cpp  send_script.cpp  send_script_blocking.cpp  spline_example.cpp  tool_contact_example.cpp  torque_control.cpp  trajectory_point_interface.cpp  trajectory_streaming.cpp
examples/resources/: rtde_input_only_ft.txt  rtde_input_recipe.txt
include/ur_client_library/: default_log_handler.h  example_robot_wrapper.h  exceptions.h  helpers.h  log.h  types.h
include/ur_client_library/comm/: Server.h  SocketConnection.h  SocketListener.h  SocketServer.h  bin_parser.h  control_mode.h  package.h  package_serializer.h  parser.h  persistent_stream.h  pipeline.h  producer.h  server.h  (+8 more)
include/urcl_3rdparty/: portable_endian.h
resources/: external_control.urscript
scripts/: start_ursim.sh  tool_communication.py
src/: compile_options.h.in  default_log_handler.cpp  example_robot_wrapper.cpp  helpers.cpp  log.cpp  types.cpp
src/comm/: Server.cpp  SocketConnection.cpp  SocketListener.cpp  SocketServer.cpp  server.cpp  tcp_server.cpp  tcp_socket.cpp
src/control/: motion_primitives.cpp  reverse_interface.cpp  script_command_interface.cpp  script_reader.cpp  script_sender.cpp  trajectory_point_interface.cpp
src/primary/: primary_client.cpp  primary_package.cpp  program_state_message.cpp  robot_message.cpp  robot_state.cpp
src/rtde/: control_package_pause.cpp  control_package_setup_inputs.cpp  control_package_setup_outputs.cpp  control_package_start.cpp  data_package.cpp  get_urcontrol_version.cpp  request_protocol_version.cpp  rtde_client.cpp  rtde_package.cpp  rtde_parser.cpp  rtde_writer.cpp  text_message.cpp
src/ur/: calibration_checker.cpp  dashboard_client.cpp  dashboard_client_implementation_g5.cpp  dashboard_client_implementation_x.cpp  error_code_client.cpp  error_code_reader.cpp  instruction_executor.cpp  robot_receive_timeout.cpp  tool_communication.cpp  ur_driver.cpp  version_information.cpp  watchdog.cpp
tests/: CMakeLists.txt  dummy.cpp  fake_primary_server.cpp  fake_primary_server.h  fake_primary_server_main.cpp  fake_rtde_server.cpp  fake_rtde_server.h  fake_rtde_server_main.cpp  test_bin_parser.cpp  test_control_mode.cpp  test_dashboard_client.cpp  test_dashboard_client_g5.cpp  test_dashboard_client_x.cpp  test_datatypes.cpp  test_deprecated_ur_driver_construction.cpp  test_external_control_program.cpp  test_fake_primary_server.cpp  test_helpers.cpp  test_instruction_executor.cpp  test_motion_primitives.cpp  test_package_serializer.cpp  test_pipeline.cpp  test_primary_client.cpp  test_primary_client_reconnect.cpp  test_primary_parser.cpp  test_producer.cpp  test_reverse_interface.cpp  test_robot_receive_timeout.cpp  test_rtde_client.cpp  test_rtde_control_package_pause.cpp  test_rtde_control_package_setup_inputs.cpp  test_rtde_control_package_setup_outputs.cpp  test_rtde_control_package_start.cpp  test_rtde_data_package.cpp  test_rtde_get_urcontrol_version.cpp  test_rtde_parser.cpp  test_rtde_request_protocol_version.cpp  test_rtde_writer.cpp  test_script_command_interface.cpp  test_script_reader.cpp  (+14 more)
tests/resources/: example_urscript_feature.urscript  example_urscript_main.urscript  exhaustive_rtde_output_recipe.txt  generate_rtde_outputs.py  rtde_output_recipe.txt  rtde_output_recipe_spline.txt  rtde_output_recipe_without_timestamp.txt  update_prog.urpx  upload_prog.urpx
tests/resources/dockerursim/: build_and_run_docker_ursim.sh
tests/resources/dockerursim/programs/cb3/: default.installation  default.variables  external_control.urp  wait_program.urp
tests/resources/dockerursim/programs/e-series/: default.variables  external_control.urp  wait_program.urp
(+97 files in other folders)
