<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur_client_library</name>
  <version>0.4.0</version>
  <description>Standalone C++ library for accessing Universal Robots interfaces. This has been forked off the ur_robot_driver.</description>
  <author>Thomas Timm Andersen</author>
  <author>Simon Rasmussen</author>
  <author>Felix Exner</author>
  <author>Lea Steffen</author>
  <author>Tristan Schnell</author>
  <maintainer email="exner@fzi.de">Felix Exner</maintainer>
  <license file="LICENSE_apache_2_0">Apache-2.0</license>
  <license file="include/ur_client_library/queue/LICENSE.md">BSD-2-Clause</license>
  <license file="include/ur_client_library/queue/atomicops.h">Zlib</license>
  <license file="tests/resources/dockerursim/Dockerfile">MIT</license>

  <url type="website">http://wiki.ros.org/ur_client_library</url>
  <url type="bugtracker">https://github.com/UniversalRobots/Universal_Robots_Client_Library/issues</url>
  <url type="repository">https://github.com/UniversalRobots/Universal_Robots_Client_Library</url>

  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>boost</build_depend>
  <exec_depend condition="$ROS_VERSION == 1">catkin</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">ament_cmake</exec_depend>

  <export>
    <build_type>cmake</build_type>
  </export>

</package>
